@startuml
interface ControlStock {
    + addToStock(cantidadLong : long) : void
    + removeFromStock(cantidadLong : long) : void
    + getStock() : int
}

class Libro implements ControlStock {
    - nombreLibro : String
    - stock : ArrayList<Integer>
    + Libro(nombreLibro : String)
    + addToStock(cantidadLong : long) : void
    + removeFromStock(cantidadLong : long) : void
    + getStock() : int
}

class ExcepcionStockDesbordado {
    + ExcepcionStockDesbordado(nombreLibro : String)
}

class SistemaControlStock {
    + main(args : String[]) : void
}

Libro ..> ExcepcionStockDesbordado : throws
SistemaControlStock --> Libro : uses
@enduml
